chore: update seo

--- a/data/1-why-we-have-pay-tax.mdx
+++ b/data/1-why-we-have-pay-tax.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why we have to pay tax?
-description: Why we have to pay tax?
+description: Why i have to part my hard-earned money to taxes?
 date: '2022-07-15'
 tags:
   - taxes
