--- a/data/2-pay-raise-whats-next.mdx
+++ b/data/2-pay-raise-whats-next.mdx
@@ -1,6 +1,6 @@
 ---
 title: Pay raise, what’s next?
-description: Pay raise, what’s next?
+description: Earning is hard, spending is harder. Pay wisely
 date: '2022-07-15'
 tags:
   - finance
