--- a/data/1-why-we-have-pay-tax.mdx
+++ b/data/1-why-we-have-pay-tax.mdx
@@ -6,5 +6,5 @@ tags:
   - taxes
 images:
   - /comics/why-we-have-to-pay-tax/01.jpeg
-  - /comics/why-we-have-to-pay-tax/Page 02.jpeg
+  - /comics/why-we-have-to-pay-tax/02.jpeg
 ---
