fix: comic list order and show title option

--- a/data/1-why-we-have-pay-tax.mdx
+++ b/data/1-why-we-have-pay-tax.mdx
@@ -2,6 +2,7 @@
 title: Why we have to pay tax?
 description: Why i have to part my hard-earned money to taxes?
 date: '2022-07-15'
+show_title: true
 tags:
   - taxes
 images:
