--- a/data/2-pay-raise-whats-next.mdx
+++ b/data/2-pay-raise-whats-next.mdx
@@ -2,6 +2,7 @@
 title: Pay raise, what’s next?
 description: Earning is hard, spending is harder. Pay wisely
 date: '2022-07-15'
+show_title: true
 tags:
   - finance
 images:
