--- a/data/3-what-to-do-when-interest-rate-change.mdx
+++ b/data/3-what-to-do-when-interest-rate-change.mdx
@@ -2,6 +2,7 @@
 title: What to do when interest rate change?
 description: Don't let the interest rate kill you. Kill it!
 date: '2023-09-19'
+show_title: true
 tags:
   - finance
 images:
