chore: fix file name

--- a/data/4-understanding-6-jars.mdx
+++ b/data/4-understanding-6-jars.mdx
@@ -1,10 +1,10 @@
 ---
 title: Budgeting Adventures with Mochi and Neko Understanding the 6 Jars
-description: At the end of the day, it's not about who earns more but who saves more. Let's explore the technique to manage and save money. 
+description: At the end of the day, it's not about who earns more but who saves more. Let's explore the technique to manage and save money.
 date: '2023-10-05'
 tags:
   - budgeting
 images:
-  - /comics/6-jars/01.jpeg
-  - /comics/6-jars/02.jpeg
+  - /comics/6-jars/01.jpg
+  - /comics/6-jars/02.jpg
 ---
